#31: bug: list expand/collapse button in sidebar

--- a/mfe-shell-angular/src/app/layouts/main-layout/main-layout.component.scss
+++ b/mfe-shell-angular/src/app/layouts/main-layout/main-layout.component.scss
@@ -112,25 +112,3 @@ mat-sidenav-content {
         opacity: 1;
     }
 }
-
-@keyframes shake {
-    0% {
-        transform: translateX(0);
-    }
-
-    25% {
-        transform: translateX(-2px);
-    }
-
-    50% {
-        transform: translateX(2px);
-    }
-
-    75% {
-        transform: translateX(-1px);
-    }
-
-    100% {
-        transform: translateX(0);
-    }
-}
