--- a/mfe-shell-angular/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/mfe-shell-angular/src/app/shared/components/sidebar/sidebar.component.scss
@@ -72,7 +72,6 @@ $purple-bland-8: rgba($color-active, 0.08);
       }
     }
   }
-
 }
 
 .account {
@@ -146,5 +145,27 @@ $purple-bland-8: rgba($color-active, 0.08);
         }
       }
     }
+  }
+}
+
+@keyframes shake {
+  0% {
+    transform: translateX(0);
+  }
+
+  25% {
+    transform: translateX(-2px);
+  }
+
+  50% {
+    transform: translateX(2px);
+  }
+
+  75% {
+    transform: translateX(-1px);
+  }
+
+  100% {
+    transform: translateX(0);
   }
 }
